# floating-ui

./: .gitignore  .pre-commit-config.yaml  .prettierrc.json  Cargo.toml  LICENSE.md  README.md  deny.toml  package-lock.json  package.json  upstream.toml
.github/: FUNDING.yml  renovate.json
.github/workflows/: book.yml  ci.yml  publish.yml  release.yml  upstream.yml  website.yml
book/: book.toml
book-examples/: Cargo.toml  Trunk.toml  index.html  main.js  tailwind.config.js
book-examples/src/: app.rs  components.rs  main.rs  placement.rs  positioning.rs  shift.rs  size.rs  utils.rs
book-examples/src/components/: chrome.rs  floating.rs  grid_item.rs  reference.rs
book-examples/src/positioning/: flip.rs  placement.rs  shift.rs  size.rs
book-examples/src/utils/: rem_to_px.rs
book/src/: SUMMARY.md  auto-update.md  compute-position.md  detect-overflow.md  examples.md  introduction.md  leptos.md  platform.md  virtual-elements.md
book/src/frameworks/: README.md  dioxus.md  dom.md  leptos.md  yew.md
book/src/middleware/: README.md  arrow.md  auto-placement.md  flip.md  hide.md  inline.md  offset.md  shift.md  size.md
book/theme/: tabs.css  tabs.js  theme.css  theme.js  trunk.css  trunk.js
scripts/: Cargo.toml
scripts/src/: lib.rs
