[workspace]
members = ["packages/*", "packages/*/example", "packages/*/tests/*"]
resolver = "2"

[workspace.package]
authors = ["Nixy <info@nixy.software>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/NixySoftware/floating-ui"
version = "0.0.8"

[workspace.dependencies]
cfg-if = "1.0.0"
dyn-clone = "1.0.17"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
wasm-bindgen = "0.2.92"
wasm-bindgen-test = "0.3.42"

[workspace.dependencies.web-sys]
version = "0.3.69"
features = [
    "css",
    "AddEventListenerOptions",
    "CssStyleDeclaration",
    "Document",
    "DomRect",
    "DomRectList",
    "Element",
    "Event",
    "EventTarget",
    "HtmlElement",
    "HtmlSlotElement",
    "IntersectionObserver",
    "IntersectionObserverEntry",
    "IntersectionObserverInit",
    "Node",
    "ResizeObserver",
    "ResizeObserverEntry",
    "Selection",
    "ShadowRoot",
    "Window",
]
