[workspace]
members = [
    "book-examples",
    "packages/*",
    "packages/*/example",
    "packages/*/tests/*",
    "scripts",
]
resolver = "2"

[workspace.package]
authors = ["Rust for Web <info@rustforweb.org>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/RustForWeb/floating-ui"
version = "0.5.1"

[workspace.dependencies]
cfg-if = "1.0.0"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
dioxus = "0.7.0"
dyn_derive = "0.3.4"
dyn_std = "0.3.3"
floating-ui-core = { path = "./packages/core", version = "0.5.0" }
floating-ui-dioxus = { path = "./packages/dioxus", version = "0.5.0" }
floating-ui-dom = { path = "./packages/dom", version = "0.5.0" }
floating-ui-leptos = { path = "./packages/leptos", version = "0.5.0" }
floating-ui-utils = { path = "./packages/utils", version = "0.5.0" }
floating-ui-yew = { path = "./packages/yew", version = "0.5.0" }
leptos = "0.8.0"
leptos-node-ref = "0.2.0"
leptos_router = "0.8.0"
log = "0.4.22"
send_wrapper = "0.6.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
wasm-bindgen = "0.2.93"
wasm-bindgen-test = "0.3.43"
yew = "0.21.0"
yew-router = "0.18.0"

[workspace.dependencies.web-sys]
version = "0.3.70"
features = [
    "css",
    "AddEventListenerOptions",
    "CssStyleDeclaration",
    "Document",
    "DomRect",
    "DomRectList",
    "Element",
    "Event",
    "EventTarget",
    "HtmlElement",
    "HtmlSlotElement",
    "IntersectionObserver",
    "IntersectionObserverEntry",
    "IntersectionObserverInit",
    "Node",
    "Range",
    "ResizeObserver",
    "ResizeObserverEntry",
    "Selection",
    "ShadowRoot",
    "VisualViewport",
    "Window",
]
