[package]
name = "floating-ui-book"
description = "Book examples for Floating UI."
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
convert_case = "0.6.0"
floating-ui-leptos = { path = "../packages/leptos" }
leptos = { workspace = true, features = ["csr"] }
log.workspace = true
tailwind_fuse = "0.3.1"

[features]
default = ["arrow", "flip", "placement", "shift", "size", "virtual"]
arrow = []
flip = []
placement = []
shift = []
size = []
virtual = []
