[package]
name = "floating-ui-book"
description = "Book examples for Floating UI."
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = ["arrow", "flip", "placement", "shift", "size", "virtual"]
arrow = []
flip = []
placement = []
shift = []
size = []
virtual = []

[dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
convert_case = "0.10.0"
floating-ui-leptos.workspace = true
leptos = { workspace = true, features = ["csr"] }
leptos-node-ref.workspace = true
log.workspace = true
send_wrapper.workspace = true
tailwind_fuse = "0.3.1"
