[package]
name = "scripts"
description = "Scripts for Rust Floating UI."
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
env_logger = "0.11.3"
log = "0.4.21"
octocrab = "0.38.0"
serde.workspace = true
serde_json.workspace = true
strum = { version = "0.26.2", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.12"
