[package]
name = "scripts"
description = "Scripts for Rust Floating UI."
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
env_logger = "0.11.3"
log = "0.4.21"
octocrab = "0.38.0"
semver = "1.0.22"
serde.workspace = true
strum = { version = "0.26.2", features = ["derive"] }
tempfile = "3.10.1"
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.12"
